WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240456
REGRESSION(
r294104
): [GStreamer][VideoCapture] Webcam raw streams may hang up the video capture pipeline
https://bugs.webkit.org/show_bug.cgi?id=240456
Summary
REGRESSION(r294104): [GStreamer][VideoCapture] Webcam raw streams may hang up...
Loïc Le Page
Reported
2022-05-16 07:45:36 PDT
When capturing a raw stream from a webcam, the pipeline may hang up because the decodebin3 cannot fix the upstream caps. The webcam capsfilter should not only specify the captured mime-type (video/x-raw) but also the capture image dimensions.
Attachments
Patch
(3.06 KB, patch)
2022-05-16 08:24 PDT
,
Loïc Le Page
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Loïc Le Page
Comment 1
2022-05-16 08:24:04 PDT
Created
attachment 459427
[details]
Patch
EWS
Comment 2
2022-05-16 10:54:32 PDT
Committed
r294243
(
250601@main
): <
https://commits.webkit.org/250601@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 459427
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-05-16 10:55:14 PDT
<
rdar://problem/93357085
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug