REGRESSION(r294104): [GStreamer][VideoCapture] Webcam raw streams may hang up the video capture pipeline https://bugs.webkit.org/show_bug.cgi?id=240456

Patch by Loïc Le Page <llepage@igalia.com> on 2022-05-16
Reviewed by Philippe Normand.

When capturing a raw stream from a webcam, the pipeline may hang up because the decodebin3 cannot fix the upstream caps.
The webcam capsfilter should not only specify the captured mime-type (video/x-raw) but also the capture image dimensions.

Manually tested.

* platform/mediastream/gstreamer/GStreamerVideoCapturer.cpp:

Canonical link: https://commits.webkit.org/250601@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294243 268f45cc-cd09-0410-ab3c-d52691b4dbfc